...
        var id: Self { self }

        var title: LocalizedStringKey {
            switch self {
            case .home: "Home"
            case .map: "Map"
            case .trips: "Trips"
            case .passport: "Passport"
            case .account: "Account"
            }
        }

        var symbol: String {
            switch self {
            case .home: "house"
...
